OR-348 fix style for multilines css class. It should be pre-wrap so very long text are not truncated

--- a/frontend/css/styles.less
+++ b/frontend/css/styles.less
@@ -32,7 +32,7 @@ body {
 }
 
 .multilines {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .updates-notifier {
